tests/functional/lang/eval-fail-pipe-operators.err.exp
error: attempt to call something which is not a function but an integer: 2
       at /pwd/lang/eval-fail-pipe-operators.nix:1:3:
            1| 1 |> 2
             |   ^
            2|
